--- a/canvasDemo/canvas.html
+++ b/canvasDemo/canvas.html
@@ -26,6 +26,6 @@
         <canvas id="demo5" style="border:1px solid #aaa;display:block;margin: 0 auto;">浏览器暂不支持canvas 请更换后再试</canvas>
     </div>
 <script src='digit.js'></script>
-<script src='script.js'></script>
+<script src='canvas.js'></script>
 </body>
 </html>
